Change class abstract and interface